[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/user-interface/fonts/default-font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/helpers/detector/detector.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/props/rising-prompt/rising-prompt.gd" type="Script" id=3]

[node name="RisingPrompt" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerDetector" parent="." instance=ExtResource( 2 )]

[node name="Text" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -40.0
margin_top = -8.0
margin_right = 40.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.980392, 0.92549, 0.843137, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RisingTween" type="Tween" parent="."]

[editable path="PlayerDetector"]
